Segmentation type in 3D view