@@ -25,17 +25,21 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
+import java.util.Map;
+import java.util.Map.Entry;
 import java.util.Objects;
 import javax.swing.Icon;
 import org.joml.Vector4f;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.weasis.core.api.gui.util.ActionW;
+import org.weasis.dicom.codec.SpecialElementRegion;
 import org.weasis.dicom.codec.display.Modality;
 import org.weasis.dicom.viewer3d.EventManager;
 import org.weasis.dicom.viewer3d.vr.lut.PresetGroup;
 import org.weasis.dicom.viewer3d.vr.lut.PresetPoint;
 import org.weasis.dicom.viewer3d.vr.lut.VolumePreset;
+import org.weasis.opencv.seg.RegionAttributes;
 
 public class Preset extends TextureData {
   private static final Logger LOGGER = LoggerFactory.getLogger(Preset.class);
@@ -511,7 +515,7 @@ public class Preset extends TextureData {
   static Preset getOriginalPreset() {
     try {
       List<VolumePreset> original = loadFile("/originalLut.json"); // NON-NLS
-      return buildPreset(original.get(0));
+      return buildPreset(original.getFirst());
     } catch (IOException e) {
       throw new RuntimeException(e);
     }
@@ -529,5 +533,52 @@ public class Preset extends TextureData {
       LOGGER.error("Cannot read the preset {}", p.getName(), e);
     }
     return null;
+  }
+
+  public static Preset getSegmentationLut(DicomVolTexture texture) {
+    List<SpecialElementRegion> segList = texture.getSegmentations();
+    if (!segList.isEmpty()) {
+      List<PresetGroup> groups = new ArrayList<>();
+      groups.add(
+          new PresetGroup(
+              "StartEmpty", new PresetPoint[] {getTransparentPoint(-10), getTransparentPoint(0)}));
+
+      List<PresetPoint> presetPoints = new ArrayList<>();
+      int max = 1;
+
+      for (SpecialElementRegion segElement : segList) {
+        Map<Integer, ? extends RegionAttributes> map = segElement.getSegAttributes();
+        if (map != null) {
+          for (Entry<Integer, ? extends RegionAttributes> entry : map.entrySet()) {
+            RegionAttributes a = entry.getValue();
+            if (a.isVisible()) {
+              max = Math.max(max, entry.getKey());
+              Color c = a.getColor();
+              presetPoints.add(
+                  new PresetPoint(
+                      entry.getKey(),
+                      1.0f,
+                      c.getRed() / 255f,
+                      c.getGreen() / 255f,
+                      c.getBlue() / 255f,
+                      0.2f,
+                      0.1f,
+                      0.9f));
+            }
+          }
+        }
+      }
+      groups.add(new PresetGroup("segments", presetPoints.toArray(new PresetPoint[0])));
+      groups.add(
+          new PresetGroup(
+              "EndEmpty",
+              new PresetPoint[] {getTransparentPoint(max + 1), getTransparentPoint(max + 11)}));
+      return new Preset("Segmentation", "SEG", false, true, 1.0f, groups);
+    }
+    return null;
+  }
+
+  private static PresetPoint getTransparentPoint(int intensity) {
+    return new PresetPoint(intensity, 0, 0f, 0f, 0f, 0.2f, 0.1f, 0.9f);
   }
 }
